[metadata]
name = TrboDataSvc
version = 0.0.7
author = Natalie
author_email = natalie@natnat.xyz
description = A collection of libraries to handle communication and interpretation of MotoTRBO Data Services (ARS, TMS, LRRP, Job Tickets, etc)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.natnat.xyz/natalie/TrboDataSvc
project_urls =
    Bug Tracker = https://git.natnat.xyz/natalie/TrboDataSvc/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src